Fixes in variable matching, detection of no replaced service and url format.